fix: default connection to database

--- a/AlquilaFacilPlatform/appsettings.json
+++ b/AlquilaFacilPlatform/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=alquilafacildb.mysql.database.azure.com;user=adminAlquilaFacil;password=Alquilafacil@1234;database=alquilaFacil"
+    "DefaultConnection": "server=alquilafacil-bd.mysql.database.azure.com;user=adminAlquilaFacil;password=Alquilafacil@1234;database=alquilafacil-bd"
   },
   "TokenSettings": {
     "Secret": "Place here your secret for token generation"
